--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-diffusers==0.34.0
+diffusers>=0.34.0
 dreamsim==0.2.1
 imageio==2.33.0
 lpips==0.1.4
@@ -9,7 +9,9 @@ pandas==2.2.3
 Pillow==11.2.1
 Requests==2.32.3
 safetensors==0.5.3
-torch==2.4.0
-torchvision==0.19.0
+torch>=2.6
+torchvision>=0.19.0
 tqdm==4.66.5
-transformers==4.48.0
+transformers>=4.48.0
+accelerate>=0.26.0
+peft>=0.13.0
